--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
                             <p>Alphaville e Região</p>
                         </div>
                     </div>
-                    <a href="https://wa.me/5511974918049" class="whatsapp-btn" target="_blank">
+                    <a href="https://wa.me/5511xxxxxxx" class="whatsapp-btn" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         Falar no WhatsApp
                     </a>
@@ -1331,7 +1331,7 @@
             btn.addEventListener('click', function(e) {
                 e.preventDefault();
                 const message = encodeURIComponent('Olá! Gostaria de saber mais sobre os serviços da NIMIAR.');
-                const whatsappUrl = `https://wa.me/5511974918049?text=${message}`;
+                const whatsappUrl = `https://wa.me/55119xxxxxxxxx?text=${message}`;
                 window.open(whatsappUrl, '_blank');
             });
         });
