--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contato</h3>
-                    <p>📞 (11) 97491-8049</p>
+                    <p>📞 (11) xxxxxxxxx</p>
                     <p>📧 atendimento@nimiar.com</p>
                     <p>📍 Alphaville e Região</p>
                 </div>
