--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Telefone</h4>
-                            <p>(11) 97491-8049</p>
+                            <p>(11) novo</p>
                         </div>
                     </div>
                     <div class="contact-item">
