--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Telefone</h4>
-                            <p>(11) novo</p>
+                            <p>(11) 978827686</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -1258,7 +1258,7 @@
                             <p>Alphaville e Região</p>
                         </div>
                     </div>
-                    <a href="https://wa.me/5511xxxxxxx" class="whatsapp-btn" target="_blank">
+                    <a href="https://wa.me/5511978827686" class="whatsapp-btn" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         Falar no WhatsApp
                     </a>
@@ -1300,7 +1300,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contato</h3>
-                    <p>📞 (11)novo</p>
+                    <p>📞 (11)978827686</p>
                     <p>📧 atendimento@nimiar.com</p>
                     <p>📍 Alphaville e Região</p>
                 </div>
@@ -1331,7 +1331,7 @@
             btn.addEventListener('click', function(e) {
                 e.preventDefault();
                 const message = encodeURIComponent('Olá! Gostaria de saber mais sobre os serviços da NIMIAR.');
-                const whatsappUrl = `https://wa.me/55119xxxxxxxxx?text=${message}`;
+                const whatsappUrl = `https://wa.me/55119788276869xxxxxxxxx?text=${message}`;
                 window.open(whatsappUrl, '_blank');
             });
         });
