--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
             btn.addEventListener('click', function(e) {
                 e.preventDefault();
                 const message = encodeURIComponent('Olá! Gostaria de saber mais sobre os serviços da NIMIAR.');
-                const whatsappUrl = `https://wa.me/55119788276869xxxxxxxxx?text=${message}`;
+                const whatsappUrl = `https://wa.me/55119788276869?text=${message}`;
                 window.open(whatsappUrl, '_blank');
             });
         });
