--- a/index.html
+++ b/index.html
@@ -1083,10 +1083,10 @@
                     <div class="package-economy">Economia de até 12%</div>
                     <ul class="package-features">
                         <li><i class="fas fa-check"></i> Jardinagem completa</li>
-                        <li><i class="fas fa-check"></i> Tratamento e manutenção de piscina</li>
-                        <li><i class="fas fa-check"></i> Relatório mensal de serviços</li>
-                        <li><i class="fas fa-check"></i> Pequenos reparos elétricos</li>
-                        <li><i class="fas fa-check"></i> Pequenos reparos hidráulicos</li>
+                        <li><i class="fas fa-check"></i> Tratamento e manutenção de piscina (Semanal)</li>
+                        <li><i class="fas fa-check"></i> Relatório mensal de serviços (mensal)</li>
+                        <li><i class="fas fa-check"></i> Reparos elétricos (1x/mês)</li>
+                        <li><i class="fas fa-check"></i> Reparos hidráulicos (1x/mês)</li>
                     </ul>
                     <a href="#contato" class="btn btn-primary">Contratar</a>
                 </div>
@@ -1099,9 +1099,9 @@
                     <div class="package-economy">Economia de até 15,1%</div>
                     <ul class="package-features">
                         <li><i class="fas fa-check"></i> Tudo do Pacote Básico</li>
-                        <li><i class="fas fa-check"></i> Limpeza de calhas (2x por ano)</li>
-                        <li><i class="fas fa-check"></i> Limpeza de caixa d'água (2x por ano)</li>
-                        <li><i class="fas fa-check"></i> Limpeza de ar-condicionado (2x por ano)</li>
+                        <li><i class="fas fa-check"></i> Limpeza de calhas (1x/semestre)</li>
+                        <li><i class="fas fa-check"></i> Limpeza de caixa d'água (1x/semestre)</li>
+                        <li><i class="fas fa-check"></i> Limpeza de ar-condicionado (1x/semestre/4 un.)</li>
                     </ul>
                     <a href="#contato" class="btn btn-primary">Contratar</a>
                 </div>
@@ -1115,9 +1115,9 @@
                         <li><i class="fas fa-check"></i> Tudo do Pacote Médio</li>
                         <li><i class="fas fa-check"></i> Reparo de trincas e pequenas pinturas</li>
                         <li><i class="fas fa-check"></i> Manutenção de bomba de piscina</li>
-                        <li><i class="fas fa-check"></i> Limpeza de sofás e tapetes (2x por ano)</li>
-                        <li><i class="fas fa-check"></i> Limpeza de sistema fotovoltaico</li>
-                        <li><i class="fas fa-check"></i> Lavagem de veículo (semanal)</li>
+                        <li><i class="fas fa-check"></i> Limpeza de sofás e tapetes (1x/semestre)</li>
+                        <li><i class="fas fa-check"></i> Limpeza de sistema fotovoltaico (1x/semestre)</li>
+                        <li><i class="fas fa-check"></i> Lavagem de veículo (2x/mês)</li>
                     </ul>
                     <a href="#contato" class="btn btn-primary">Contratar</a>
                 </div>
